feat: User role 필드 추가 및 JWT 토큰에 role 클레임 적용
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>